Fixed horizontal scroll Firefox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,6 +12,10 @@ abbr[title="required"] {
   display: none;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 /* header */
 
 /* footer */
